# rust-rest-demo

./: Cargo.toml  README.md
config/: app.yaml
docs/: db.sql
src/: main.rs
src/server/: code.rs  mod.rs  route.rs  user.rs
src/store/: mod.rs  user.rs
