[package]
name = "rust_rest_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.4.4"
log = "0.4.0"
env_logger = "0.8.4"
futures = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"