[package]
name = "rust_rest_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.4.4"
log = "0.4.13"
env_logger = "0.8.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
serde_derive = "1.0.126"
lazy_static = "1.4"
rbson = "2.0"
# rbatis (required) default is all-database+runtime-async-std-rustls
rbatis = { version = "3.0.20" }
config = "0.11.0"
clap = "2.33.3"

